--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,6 +9,10 @@
     list-style: none;
     margin: 0;
     padding: 0;
+
+    &__item {
+        margin-top: 3rem;
+    }
 }
 
 @media screen and (min-width: 900px) {
@@ -20,6 +24,7 @@
             flex-basis: 50%;
             min-width: 50%;
             padding-right: 2rem;
+            margin-top: 0;
 
             &:nth-child(2n) {
                 padding-right: 0;
@@ -124,7 +129,13 @@
 }
 
 .wrapper {
-    padding: 2rem;
+    padding: 1rem;
+}
+
+@media screen and (min-width: 900px) {
+    .wrapper {
+        padding: 2rem;
+    }
 }
 
 @media screen and (min-width: 1100px) {
